--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "bluebird": "^3.3.1",
     "coffee-script": "^1.10.0",
     "node-phantom-simple": "^2.2.4",
-    "phantomjs": "^2.1.3"
+    "phantomjs": "^1.9.19"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^2.4.5"
   }
 }
