Changed main file in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phantom-crawler",
   "version": "0.0.0",
   "description": "Crawls pages like a real browser",
-  "main": "src/crawler.ics",
+  "main": "bin/crawler.js",
   "private": true,
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register"
