--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "phantom-crawler",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Lightweight crawler that works like a real browser",
   "main": "bin/crawler",
-  "keywords": ["crawler", "spider", "phantomjs", "simple", "fetch", "promise", "ajax"],
+  "keywords": [
+    "crawler",
+    "spider",
+    "phantomjs",
+    "simple",
+    "fetch",
+    "promise",
+    "ajax"
+  ],
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register",
     "preversion": "npm test"
